--- a/index.html
+++ b/index.html
@@ -30,27 +30,128 @@
             <h3>Indianapolis Potholes</h3>
             <table cellpadding="0" cellspacing="0" class="dataTable">
                 <thead>
-                    <th>
-                        Pothole ID
-                    </th>
-                    <th>
-                        Value Index
-                    </th>
-                    <th>
-                        Township
-                    </th>
-                    <th>
-                        Address
-                    </th>
-                    <th>
-                        Source
-                    </th>
-                    <th>
-                        Age (days)
-                    </th>
+                    <tr>
+                        <th>
+                            Pothole ID
+                        </th>
+                        <th>
+                            Value Index
+                        </th>
+                        <th>
+                            Township
+                        </th>
+                        <th>
+                            Address
+                        </th>
+                        <th>
+                            Source
+                        </th>
+                        <th>
+                            Age (days)
+                        </th>
+                    </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1.122
+                        </td>
+                        <td>
+                            Hamilton
+                        </td>
+                        <td>
+                            123 test ave
+                        </td>
+                        <td>
+                            Citizen
+                        </td>
+                        <td>
+                            12
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1.122
+                        </td>
+                        <td>
+                            Hamilton
+                        </td>
+                        <td>
+                            123 test ave
+                        </td>
+                        <td>
+                            Citizen
+                        </td>
+                        <td>
+                            12
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1.122
+                        </td>
+                        <td>
+                            Hamilton
+                        </td>
+                        <td>
+                            123 test ave
+                        </td>
+                        <td>
+                            Citizen
+                        </td>
+                        <td>
+                            12
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1.122
+                        </td>
+                        <td>
+                            Hamilton
+                        </td>
+                        <td>
+                            123 test ave
+                        </td>
+                        <td>
+                            Citizen
+                        </td>
+                        <td>
+                            12
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            1.122
+                        </td>
+                        <td>
+                            Hamilton
+                        </td>
+                        <td>
+                            123 test ave
+                        </td>
+                        <td>
+                            Citizen
+                        </td>
+                        <td>
+                            12
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
