--- a/mapsTest.html
+++ b/mapsTest.html
@@ -17,7 +17,7 @@ function initialize() {
   var myLatlng = new google.maps.LatLng(39.768403, -86.158068);
   var mapOptions = {
     zoom: 13,
-    center: myLatlng
+    center: myLatlngv
   }
 
   var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
