--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
         <link rel="stylesheet" href="css/base.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+        <style>
+            html, body, #map-canvas {
+                height: 100%;
+                margin: 0px;
+                padding: 0px
+            }
+            #map-canvas {
+                height: 600px;
+            }
+
+        </style>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,8 +37,7 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-            <div id="map">
-            </div>
+            <div id="map-canvas"></div>
 
             <h3>Indianapolis Potholes</h3>
             <table cellpadding="0" cellspacing="0" class="dataTable">
